test/suite/samples/external_dns_identifier/allow_identifier/case.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-0
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: ing-0-default-black
spec:
  rules:
  - host: ing-0.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
